src/objects/Partner_Library_Folder__c.object
<CustomObject>
    <fields>
        <fullName>Folder_Level__c</fullName>
        <label>Folder Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Folder__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Parent Folder</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Type__c</fullName>
        <label>Partner Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Indirect Reseller</fullName>
                </value>
                <value>
                    <fullName>Value Added Reseller</fullName>
                </value>
                <value>
                    <fullName>Service Provider</fullName>
                </value>
                <value>
                    <fullName>Alliance Partner</fullName>
                </value>
                <value>
                    <fullName>Industrial Partner / System Integrator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Partner Library Folder</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Partner_Type__c</columns>
        <columns>Folder_Level__c</columns>
        <columns>Parent_Folder__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Partner Library Folder Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Library Folders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>